Working through classifier.ipynb

--- a/classifier/classifier.ipynb
+++ b/classifier/classifier.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hashlib\n",
+    "\n",
+    "\n",
+    "def sha256(s: str) -> str:\n",
+    "    hasher = hashlib.sha256()\n",
+    "    hasher.update(s.encode('utf-8'))\n",
+    "    return hasher.hexdigest()\n",
+    "\n",
+    "def print_none_dup_stats(values):\n",
+    "    all_vals = values\n",
+    "    vals_without_nones = [x for x in all_vals if x is not None]\n",
+    "    vals_without_nones_and_dups = set(vals_without_nones)\n",
+    "    print(f\"{len(all_vals)=}, {len(vals_without_nones)=}, {len(vals_without_nones_and_dups)=}\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -50,13 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
-    "global_shuffle_seed = 4\n",
-    "global_debug=False\n",
-    "global_override=True"
+    "shuffle_seed = 4\n",
+    "test_size = 0.2"
    ]
   },
   {
@@ -64,6 +84,247 @@
    "metadata": {},
    "source": [
     "### Load tagtog Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len(all_vals)=14585, len(vals_without_nones)=14376, len(vals_without_nones_and_dups)=14178\n",
+      "len(all_vals)=14585, len(vals_without_nones)=14585, len(vals_without_nones_and_dups)=14585\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 14585 entries, 0 to 14584\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   doc_id               14376 non-null  object \n",
+      " 1   filename             1176 non-null   object \n",
+      " 2   is_flood             14585 non-null  bool   \n",
+      " 3   is_bangladesh        976 non-null    object \n",
+      " 4   flood_related        973 non-null    object \n",
+      " 5   flood_climatechange  967 non-null    object \n",
+      " 6   newspaper            14382 non-null  object \n",
+      " 7   flood_type           275 non-null    object \n",
+      " 8   text                 14585 non-null  object \n",
+      " 9   dates                1176 non-null   object \n",
+      " 10  anomaly              64 non-null     object \n",
+      " 11  districts            1176 non-null   object \n",
+      " 12  divisions            1176 non-null   object \n",
+      " 13  datePublished        13409 non-null  object \n",
+      " 14  connect_filename     13409 non-null  float64\n",
+      " 15  sha256               14585 non-null  object \n",
+      "dtypes: bool(1), float64(1), object(14)\n",
+      "memory usage: 1.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_data0 = load_data(balance=None)\n",
+    "df_data0[\"sha256\"] = df_data0.text.apply(sha256)\n",
+    "print_none_dup_stats(df_data0.doc_id.values)\n",
+    "print_none_dup_stats(df_data0.sha256.values)\n",
+    "df_data0.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sha256</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>is_flood</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>13638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>947</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          sha256\n",
+       "is_flood        \n",
+       "False      13638\n",
+       "True         947"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_data0[[\"is_flood\", \"sha256\"]].groupby(\"is_flood\", dropna=False).count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 14 dup records in 14585 (unbalanced) dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_data0.iloc[[i for i, x in enumerate(df_data0.text.apply(lambda x: sha256(x if len(x) < 150 else x[75:-75])).duplicated(keep=\"first\")) if x]].text.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len(all_vals)=1894, len(vals_without_nones)=1685, len(vals_without_nones_and_dups)=1559\n",
+      "len(all_vals)=1894, len(vals_without_nones)=1894, len(vals_without_nones_and_dups)=1894\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 1894 entries, 947 to 946\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   doc_id               1685 non-null   object \n",
+      " 1   filename             1176 non-null   object \n",
+      " 2   is_flood             1894 non-null   bool   \n",
+      " 3   is_bangladesh        976 non-null    object \n",
+      " 4   flood_related        973 non-null    object \n",
+      " 5   flood_climatechange  967 non-null    object \n",
+      " 6   newspaper            1691 non-null   object \n",
+      " 7   flood_type           275 non-null    object \n",
+      " 8   text                 1894 non-null   object \n",
+      " 9   dates                1176 non-null   object \n",
+      " 10  anomaly              64 non-null     object \n",
+      " 11  districts            1176 non-null   object \n",
+      " 12  divisions            1176 non-null   object \n",
+      " 13  datePublished        718 non-null    object \n",
+      " 14  connect_filename     718 non-null    float64\n",
+      " 15  sha256               1894 non-null   object \n",
+      "dtypes: bool(1), float64(1), object(14)\n",
+      "memory usage: 238.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_data = load_data(balance=\"is_flood\")\n",
+    "df_data[\"sha256\"] = df_data.text.apply(sha256)\n",
+    "print_none_dup_stats(df_data.doc_id.values)\n",
+    "print_none_dup_stats(df_data.sha256.values)\n",
+    "df_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sha256</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>is_flood</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>947</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>947</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          sha256\n",
+       "is_flood        \n",
+       "False        947\n",
+       "True         947"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_data[[\"is_flood\", \"sha256\"]].groupby(\"is_flood\", dropna=False).count()"
    ]
   },
   {
@@ -80,11 +341,9 @@
     }
    ],
    "source": [
-    "result, clf_result = {}, {}\n",
-    "df_data = load_data(balance='is_flood')\n",
-    "data_true = query_dataframe(df_data, {'is_flood':True})\n",
-    "data_false = query_dataframe(df_data, {'is_flood':False})\n",
-    "print('Total:',len(df_data),'True:',len(data_true), 'False:',len(data_false))"
+    "data_true = query_dataframe(df_data, {'is_flood': True})\n",
+    "data_false = query_dataframe(df_data, {'is_flood': False})\n",
+    "print('Total:', len(df_data), 'True:', len(data_true), 'False:', len(data_false))"
    ]
   },
   {
@@ -96,7 +355,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to /Users/ikh/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('stopwords')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,11 +399,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_data['text0'] = df_data['text']\n",
     "df_data['text'] = df_data['text'].apply(preprocess)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 4 dups in balanced downsampled dataset before tokenization, and 135 dups - after tokenization (7%):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_data.iloc[[i for i, x in enumerate(df_data.text0.apply(lambda x: x if len(x) < 50 else x[40:]).duplicated(keep=\"first\")) if x]].text.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "135"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_data[df_data.text.duplicated(keep=False)]) - len(df_data[df_data.text.duplicated(keep=\"first\")]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.07127771911298839"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "135 / 1894"
    ]
   },
   {
@@ -128,64 +483,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_data_ratio(df_data, test_size=0.2, shuffle_seed=4, debug=False, \n",
-    "                    save_folder=None, load_folder=None, override=False, file_prefix=''):\n",
-    "    save_file, load_file=None, None\n",
-    "    if save_folder: save_file = os.path.join(save_folder,file_prefix+'data.json')\n",
-    "    if load_folder: load_file = os.path.join(load_folder,file_prefix+'data.json')\n",
-    "    \n",
-    "    if not override and load_file and os.path.isfile(load_file):\n",
-    "        if debug: print('loaded',load_file)\n",
-    "        js = json.load(open(load_file))\n",
-    "        train_df = pd.DataFrame(js['train'])\n",
-    "        test_df = pd.DataFrame(js['test'])\n",
-    "        return {'train':train_df, 'test':test_df}\n",
-    "    \n",
+    "def make_data_ratio(df_data, test_size=0.2, shuffle_seed=4):\n",
     "    true_data = df_data.loc[df_data['is_flood']==True]\n",
     "    false_data = df_data.loc[df_data['is_flood']==False]\n",
+    "    \n",
     "    train_true, test_true = train_test_split(true_data, test_size=test_size, random_state=shuffle_seed)\n",
     "    train_false, test_false = train_test_split(false_data, test_size=test_size, random_state=shuffle_seed)\n",
     "    \n",
     "    train_df = pd.concat([train_true, train_false])\n",
+    "    \n",
     "    train_df = train_df.sample(n=len(train_df), random_state=shuffle_seed).reset_index(drop=True)\n",
     "    test_df = pd.concat([test_true, test_false])\n",
     "    test_df = test_df.sample(n=len(test_df), random_state=shuffle_seed).reset_index(drop=True)\n",
     "    \n",
-    "    if debug: print('Data Loaded')\n",
-    "\n",
-    "    if save_file:\n",
-    "        train_json = train_df.to_json(orient='records')\n",
-    "        test_json = test_df.to_json(orient='records')\n",
-    "        json.dump({'train':json.loads(train_json), 'test':json.loads(test_json)}, open(save_file,'w'), indent=2)\n",
-    "    return {'train':train_df, 'test':test_df}\n"
+    "    return {'train':train_df, 'test':test_df}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 137,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "result, clf_result = {}, {}\n",
-    "save_data_folder = 'data_splits/'\n",
-    "load_data_folder = 'data_splits/'\n",
     "test_size = 0.2\n",
-    "if not os.path.isdir(save_data_folder): os.mkdir(save_data_folder)\n",
-    "debug=global_debug or False\n",
-    "override=global_override or False\n",
-    "data_split = make_data_ratio(df_data, test_size=test_size, save_folder=save_data_folder, load_folder=load_data_folder, \n",
-    "                               debug=debug, shuffle_seed=global_shuffle_seed, override=override)\n"
+    "data_split = make_data_ratio(df_data, test_size=test_size, shuffle_seed=shuffle_seed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 138,
    "metadata": {
     "scrolled": true
    },
@@ -286,16 +619,7 @@
     "             debug=False, override=False, save_folder=None, load_folder=None, file_prefix=''):\n",
     "    save_clf_result = {}\n",
     "    vectCache, classifierCache = {}, {}\n",
-    "    if load_folder:\n",
-    "        res_file = os.path.join(load_folder,file_prefix+'clf_result.json')\n",
-    "        clf_res_file = os.path.join(load_folder,file_prefix+'result.json')\n",
-    "        if os.path.isfile(res_file): clf_result=json.load(open(res_file))\n",
-    "        if os.path.isfile(clf_res_file): result=json.load(open(clf_res_file))\n",
-    "        if os.path.isfile(res_file) and os.path.isfile(clf_res_file) and debug: print('loaded result')\n",
     "    \n",
-    "    if override:\n",
-    "        clf_result, result = {}, {}\n",
-    "        if debug: print('OVERRIDE')\n",
     "    for g in list(grid):\n",
     "        try:\n",
     "            feature_name = g.get('feature_extract',None)\n",
@@ -304,7 +628,7 @@
     "                raise Exception('Feature Extract and Classifier Name required')\n",
     "            result_key = feature_name + '-' + clf_name\n",
     "            if result.get(result_key): continue\n",
-    "            if debug: print('Feature:', feature_name, '  Clasifier:',clf_name, '  Key:',result_key)\n",
+    "            print('Feature:', feature_name, '  Clasifier:', clf_name, '  Key:', result_key)\n",
     "            \n",
     "            if feature_name in vectCache:\n",
     "                (trainX, testX, trainY, testY, feature2) = vectCache[feature_name]\n",
@@ -338,9 +662,6 @@
     "        except Exception as e:\n",
     "            print('Error:',e)\n",
     "            continue\n",
-    "    if save_folder:\n",
-    "        json.dump(save_clf_result, open(os.path.join(load_folder,file_prefix+'clf_result.json'),'w'), indent=2)\n",
-    "        json.dump(result, open(os.path.join(load_folder,file_prefix+'result.json'),'w'), indent=2)\n",
     "    return clf_result, result\n"
    ]
   },
@@ -565,11 +886,6 @@
     }
    ],
    "source": [
-    "override=global_override or False\n",
-    "debug=global_debug or False\n",
-    "save_results_folder = 'results/'\n",
-    "load_results_folder = 'results/'\n",
-    "if not os.path.isdir(save_results_folder): os.mkdir(save_results_folder)\n",
     "clf_result, result = run_grid(grid, data_split, feature_extract, classifiers, clf_result, result, \n",
     "                              debug=debug, override=override, save_folder=save_results_folder, \n",
     "                             load_folder=load_results_folder)\n"
@@ -578,9 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -620,9 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1098,9 +1410,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bangladesh_venv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "bangladesh_venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1112,9 +1424,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
